--- a/src/mvc_app/Views/HelloWorld/Index.cshtml
+++ b/src/mvc_app/Views/HelloWorld/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Hello World Index";
+    ViewData["Title"] = "Movie List";
 }
 
-<h2>Hello World Index</h2>
+<h2>My Movie List</h2>
 
 <p>This is a view template!</p>
