--- a/src/mvc_app/Views/Shared/_Layout.cshtml
+++ b/src/mvc_app/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - mvc_app</title>
+    <title>@ViewData["Title"] - MVC App</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -27,7 +27,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-controller="Home" asp-action="Index" class="navbar-brand">mvc_app</a>
+                <a asp-controller="Movies" asp-action="Index" class="navbar-brand">MVC App</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
